[tool.poetry]
name = "imagesecrets-api"
version = "0.1.0"
description = "A tool for encoding and decoding messages into/from images."
authors = ["Lukas Kucera <lukas.kucera.g@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/Lkms19/imagesecrets-api"

[tool.black]
line-length = 88
include = '^.+\.py$'

[tool.isort]
profile = "black"
src_paths = ["image_secrets", "tests"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
fastapi-login = "^1.6.0"
fastapi-mail = "^0.3.7"
pydantic = {extras = ["email", "ujson"], version = "^1.8.2"}
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"
tortoise-orm = { extras = ["asyncpg"], version = "^0.17.2" }
numpy = "^1.20.2"
Pillow = "^8.2.0"
bcrypt = "^3.2.0"
python-dotenv = "^0.17.1"
python-magic = "^0.4.14"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.0"
pytest-asyncio = "^0.15.1"
asynctest = "^0.13.0"
devtools = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
