[tool.poetry]
name = "imagesecrets"
version = "0.6.0"
description = "A tool for encoding and decoding messages into/from images."
authors = ["Lukas Kucera"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kucera-lukas/imagesecrets"

[tool.black]
line-length = 79
include = '^.+\.py$'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["imagesecrets", "tests"]

[tool.flake8]
max-line-length = 79
extend-ignore = "E501,"
max-complexity = 10

markers = [
    "disable_autouse: mark to disable autouse fixtures for the test",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
fastapi-login = "^1.7.2"
fastapi-mail = "^0.3.7"
pydantic = {extras = ["email", "ujson"], version = "^1.8.2"}
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"
requests = "^2.26.0"
uvicorn = "^0.15.0"
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.23" }
asyncpg = "^0.24.0"
numpy = "^1.21.1"
Pillow = "8.2.0"
bcrypt = "^3.2.0"
python-dotenv = "^0.19.0"
python-magic = "^0.4.24"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.0"
pytest-asyncio = "^0.15.1"
devtools = "^0.8.0"
mypy = "^0.910"
sqlalchemy2-stubs = "^0.0.2-alpha.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
